@@ -10,6 +10,9 @@ AC_PROG_LIBTOOL
 AC_PROG_CC
 
 AC_ARG_ENABLE(gnome-vfs,[  --disable-gnome-vfs     disable extra options that use gnome-vfs.],,enable_gnome_vfs=yes)
+AC_ARG_ENABLE(libnotify,[  --enable-libnotify     disable extra options that use gnome-vfs.],,enable_libnotify=no)
+
+
 # Checks for libraries.
 
 # Checks for header files.
@@ -36,9 +39,11 @@ PKG_CHECK_MODULES(gmpc,
 if test x${enable_gnome_vfs} = xyes; then
 	PKG_CHECK_MODULES(gmpc_gvfs, [gnome-vfs-2.0])
 	AC_DEFINE(ENABLE_GNOME_VFS, 1, [Enable extra options that use gnome-vfs])
+fi
 
-
-
+if test x${enable_libnotify} = xyes; then
+	PKG_CHECK_MODULES(gmpc_libnotify, [libnotify])
+	AC_DEFINE(ENABLE_LIBNOTIFY, 1, [Enable extra options that use gnome-vfs])
 fi
 
 AC_SUBST(gmpc_LIBS)
@@ -47,6 +52,8 @@ AC_SUBST(gmpc_CFLAGS)
 AC_SUBST(gmpc_gvfs_LIBS)
 AC_SUBST(gmpc_gvfs_CFLAGS)
 
+AC_SUBST(gmpc_libnotify_LIBS)
+AC_SUBST(gmpc_libnotify_CFLAGS)
 
 # installation paths
 AC_MSG_CHECKING(prefix)
@@ -87,7 +94,12 @@ echo ""
 echo ""
 echo "-------------- Status --------------"
 if test x${enable_gnome_vfs} = xyes; then
-	echo "Gnome VFS support is: 	enabled."
+	echo "Gnome VFS support is:	 	enabled."
 else
-	echo "Gnome VFS support is:	disabled."
+	echo "Gnome VFS support is:		disabled."
+fi
+if test x${enable_libnotify} = xyes; then
+	echo "Gnome Notification support is: 	enabled."
+else
+	echo "Gnome Notification support is:	disabled."
 fi
