@@ -7,7 +7,11 @@
 #include "misc.h"
 #include "strfsong.h"
 #include "config1.h"
+#ifdef ENABLE_LIBNOTIFY
+	#include <libnotify/notify.h>
+	NotifyHandle *n = NULL;
 
+#endif
 
 int playlist_hidden = FALSE;
 extern config_obj *config;
@@ -430,6 +434,46 @@ void exposed_signal(GtkWidget *event)
 /* this function updates the trayicon on changes */
 void tray_icon_song_change()
 {
+#ifdef ENABLE_LIBNOTIFY
+	char *text = tray_get_tooltip_text();
+	NotifyHints *hints = NULL;
+	NotifyIcon *icon = notify_icon_new_from_uri(PIXMAP_PATH"media-audiofile.png");
+	if(tray_icon)
+	{
+		int x_tv, y_tv;
+	
+		gdk_window_get_origin(GTK_WIDGET(tray_icon)->window, &x_tv, &y_tv);
+		
+		hints = notify_hints_new();
+		notify_hints_set_int(hints, "x", x_tv+(GTK_WIDGET(tray_icon)->allocation.width)/2);
+		notify_hints_set_int(hints, "y", y_tv+GTK_WIDGET(tray_icon)->allocation.height);
+
+	}
+	n = notify_send_notification(
+			n, // replaces nothing
+			NULL,
+			NOTIFY_URGENCY_NORMAL,
+			"Now Playing",
+			text,
+			icon, // no icon
+			TRUE, cfg_get_single_value_as_int_with_default(config, "tray-icon","popup-timeout",5),
+			hints, //  hints
+			NULL, // no user data
+			0); // no actions
+
+	notify_icon_destroy(icon);
+	g_free(text);
+	if (!n) {
+		fprintf(stderr, "failed to send notification\n");
+		return 1;
+	}
+
+	return ;
+
+#endif
+
+
+
 	if(cfg_get_single_value_as_int_with_default(config, "tray-icon", "do-popup", 1) &&
 			mpd_ob_player_get_state(connection) != MPD_OB_PLAYER_STOP)
 	{
